# django_social

./: manage.py  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  signup.html
django_social/: asgi.py  settings.py  urls.py  views.py  wsgi.py
groups/: models.py  urls.py  views.py
groups/migrations/: 0001_initial.py
groups/templates/groups/: group_base.html  group_detail.html  group_form.html  group_list.html
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
templates/: base.html  index.html  test.html  thanks.html
